[gd_scene load_steps=8 format=3 uid="uid://u3uat6vviy23"]

[ext_resource type="Script" path="res://scripts/enemy.gd" id="1_yta35"]
[ext_resource type="Script" path="res://Characters/Enemies/HitBox.gd" id="2_gov57"]
[ext_resource type="PackedScene" uid="uid://deaejjxbtl7lq" path="res://Characters/Enemies/EnemyGun.tscn" id="3_0sm67"]

[sub_resource type="CapsuleMesh" id="CapsuleMesh_qauht"]

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_qux4i"]
albedo_color = Color(0.968627, 0.678431, 0.909804, 1)

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_kugn6"]

[sub_resource type="CylinderShape3D" id="CylinderShape3D_x1pw5"]
radius = 0.660266

[node name="Enemy" type="CharacterBody3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.21859, 0)
disable_mode = 2
script = ExtResource("1_yta35")

[node name="MeshInstance3D" type="MeshInstance3D" parent="."]
mesh = SubResource("CapsuleMesh_qauht")
surface_material_override/0 = SubResource("StandardMaterial3D_qux4i")

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.0361032, 0)
shape = SubResource("CapsuleShape3D_kugn6")

[node name="NavigationAgent3D" type="NavigationAgent3D" parent="."]
target_desired_distance = 10.0
path_height_offset = 0.15
avoidance_enabled = true
radius = 0.75
debug_enabled = true

[node name="HealthBar" type="Label3D" parent="."]
transform = Transform3D(-1, 0, -8.74228e-08, 0, 1, 0, 8.74228e-08, 0, -1, 0, 1.227, 0)

[node name="HitBox" type="Area3D" parent="." groups=["enemies"]]
collision_layer = 2
collision_mask = 2
script = ExtResource("2_gov57")

[node name="CollisionShape3D" type="CollisionShape3D" parent="HitBox"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.0361032, 0)
shape = SubResource("CylinderShape3D_x1pw5")

[node name="attack" type="Timer" parent="."]
one_shot = true

[node name="EnemyGun" parent="." instance=ExtResource("3_0sm67")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.200107, -0.000504851, -0.938518)

[node name="RayCast3D" type="RayCast3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.579051, -0.720063)
target_position = Vector3(0, 0, -100)
collide_with_areas = true

[node name="search" type="Timer" parent="."]

[connection signal="navigation_finished" from="NavigationAgent3D" to="." method="_on_navigation_agent_3d_navigation_finished"]
[connection signal="velocity_computed" from="NavigationAgent3D" to="." method="_on_navigation_agent_3d_velocity_computed"]
[connection signal="body_hit" from="HitBox" to="." method="_on_hit_box_body_hit"]
